--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
-*.pyc
 __pycache__/
-.env/
+*.py[cod]
+*$py.class
+venv/
 .venv/
-.ipynb_checkpoints/
-.DS_Store
-*.egg-info
-
 .idea/
+.vscode/
+.pytest_cache/
+.ipynb_checkpoints/
+dist/
+build/
+*.egg-info/
+.coverage
+htmlcov/
+*.orig
+*.env
+.DS_Store
+data/predictions/predictions.csv
+data/annotations/gold.csv
