--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-jupyterlab==3.0.15
-pandas==2.3.1
-numpy==2.3.1
-matplotlib==3.10.3
-seaborn==0.13.2
+pandas>=2.0
+numpy>=1.25
+scipy>=2.0
+matplotlib>=3.8
+pytest>=8.0
+
+# (Опционально) если используете VSCode и интроспекцию
+python-dotenv>=1.0
